# fastapi-db-zoo

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
src/: app.py  config.py
src/database/: connection.py  models.py
src/routers/: kind.py  pet.py
src/services/: kind_service.py  pet_service.py
src/tests/: conftest.py  test_client.py  test_database.py
