[project]
name = "fastapi-db-zoo"
version = "0.1.0"
description = "Simple example project. Use Pydantic, FastAPI, sqlmodel, pytest, uv."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.5",
    "pydantic-settings>=2.8.1",
    "sqlmodel>=0.0.22",
]

[dependency-groups]
dev = [
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
    "ruff>=0.11.2",
]
